# tagref

./: .gitignore  .pre-commit-hooks.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MAINTAINERS.md  README.md  bake.yml  install.sh  release.sh  tagref.yml  toast.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
src/: citations.rs  config.rs  count.rs  dir_references.rs  directive.rs  duplicates.rs  file_references.rs  label.rs  main.rs  path_util.rs  ref.rs  references.rs  tag_references.rs  walk.rs
