[package]
name = "tagref"
version = "1.8.4"
authors = ["Stephan Boyer <stephan@stephanboyer.com>"]
edition = "2021"
description = "Tagref helps you maintain cross-references in your code."
license = "MIT"
documentation = "https://github.com/stepchowfun/tagref"
homepage = "https://github.com/stepchowfun/tagref"
repository = "https://github.com/stepchowfun/tagref"
readme = "README.md"

[lints]
clippy.all = "deny"
clippy.default_numeric_fallback = "deny"
clippy.pedantic = "deny"
rust.warnings = "deny"

[dependencies]
atty = "0.2"
colored = "1"
ignore = "0.4"
regex = "1"

[dependencies.clap]
version = "2"
features = ["wrap_help"]
