[package]
name = "tagref"
version = "1.13.0"
authors = ["Stephan Boyer <stephan@stephanboyer.com>"]
edition = "2024"
description = "Tagref helps you maintain cross-references in your code."
license = "MIT"
documentation = "https://github.com/stepchowfun/tagref"
homepage = "https://github.com/stepchowfun/tagref"
repository = "https://github.com/stepchowfun/tagref"
readme = "README.md"

[lints]
clippy.all = { level = "deny", priority = -1 }
clippy.default_numeric_fallback = "deny"
clippy.pedantic = { level = "deny", priority = -1 }
rust.warnings = "deny"

[dependencies]
clap = { version = "4.6.2", features = ["derive", "wrap_help"] }
colored = "3.1.1"
ignore = "0.4.30"
regex = "1.13.1"
serde = { version = "1.0.228", features = ["derive"] }
yaml_serde = "0.10.4"
